Fix handling of keys in executable maps.  Previously it was broken for keys containing whitespace.

PR:		192947
MFC after:	2 weeks
Sponsored by:	The FreeBSD Foundation

Former-commit-id: 16d91e69cebd22ab322a691e63525e5f3dc7de91